--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <img src="assets/logo.svg" height="50px"
         <h1>Blood bank system</h1>
         <p>Details goes here</p>
+        <footer>This is footer</footer>
     </body>
 </html>
